# arcmint

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  fix_cargo.py  fix_coordinator.py  fix_yaml.py  lnd-init.sh  miner.sh  monitor.sh  upgrade_tonic.py
crates/arcmint-adversary/: Cargo.toml
crates/arcmint-adversary/src/: client.rs  main.rs  report.rs  runner.rs
crates/arcmint-adversary/src/attacks/: crypto.rs  protocol.rs
crates/arcmint-core/: Cargo.toml
crates/arcmint-core/src/: anchoring.rs  crypto.rs  error.rs  frost_ops.rs  lib.rs  metrics.rs  note.rs  protocol.rs  recovery.rs  registry.rs  spending.rs  tls.rs
crates/arcmint-core/src/anchoring/: bitcoin_rpc.rs  tracker.rs  tx_builder.rs
crates/arcmint-core/src/dkg/: error.rs  mod.rs  state.rs  transcript.rs  types.rs
crates/arcmint-core/src/lightning/: backend.rs  error.rs  mod.rs  settlement.rs  types.rs
crates/arcmint-federation/: Cargo.toml
crates/arcmint-federation/src/: main.rs
crates/arcmint-gateway/: Cargo.toml
crates/arcmint-gateway/src/: main.rs
crates/arcmint-lnd/: Cargo.toml  build.rs
crates/arcmint-lnd/proto/: lightning.proto  router.proto
crates/arcmint-lnd/src/: lib.rs
crates/arcmint-loadtest/: Cargo.toml
crates/arcmint-loadtest/src/: config.rs  lnd_client.rs  main.rs  metrics.rs  report.rs
crates/arcmint-merchant/: Cargo.toml
crates/arcmint-merchant/src/: main.rs
crates/arcmint-monitor/: Cargo.toml
crates/arcmint-monitor/src/: main.rs
crates/arcmint-wallet/: Cargo.toml
crates/arcmint-wallet/src/: main.rs
loadtest/: smoke.toml  standard.toml  stress.toml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: arcmint-federation.json  arcmint-lightning.json  arcmint-security.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
tests/integration/: Cargo.toml
tests/integration/src/: lnd.rs
tests/integration/tests/: full_flow.rs
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/public/: _headers
website/src/components/: Architecture.astro  CTA.astro  Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  LogoStrip.astro  Nav.astro  Security.astro  UseCases.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
