[package]
name = "arcmint-adversary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
arcmint-core = { path = "../arcmint-core" }
tokio-rustls = { workspace = true }
chrono = "0.4"
