[package]
name = "arcmint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
curve25519-dalek = { workspace = true }
frost-ristretto255 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
sqlx = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
bitcoin = { version = "0.31", features = ["serde"] }

[features]
default = []
dev-keygen = []
