 [package]
name = "arcmint-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

 [dependencies]
 tokio = { workspace = true }
 axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
 sqlx = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
hmac = { workspace = true }
 curve25519-dalek = { workspace = true }
 frost-ristretto255 = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
 hex = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
 zeroize = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
rustls-acme = { workspace = true }
tokio-rustls = { workspace = true }
subtle = { workspace = true }
arcmint-core = { path = "../arcmint-core" }
