[package]
name = "arcmint-lnd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arcmint-core = { path = "../arcmint-core" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

