[package]
name = "arcmint-loadtest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
arcmint-core = { path = "../arcmint-core" }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
hex.workspace = true
chrono = "0.4"
hdrhistogram = "7"
toml = "0.8"
base64.workspace = true

