 [package]
name = "arcmint-merchant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

 [dependencies]
 tokio = { workspace = true }
 axum = { workspace = true }
 sqlx = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
 curve25519-dalek = { workspace = true }
 frost-ristretto255 = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
 hex = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
 zeroize = { workspace = true }
reqwest = { workspace = true }
 arcmint-core = { path = "../arcmint-core" }
